Add config to handler
